syntax = "proto3";

package tech.idonothatenosql.accounts.v1;
option go_package = "account-management-service/gen/go/tech/idonothatenosql/accounts/v1;pb_www_accounts";

import "google/protobuf/timestamp.proto";

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {}
}

message CreateAccountRequest {
  string full_name = 1;
  string email = 2;
  string username = 3;
  string password = 4;
  string password_confirmation = 5;
}

message CreateAccountResponse {
  string id = 1;
  string full_name = 2;
  string email = 3;
  string username = 4;
  google.protobuf.Timestamp created_at = 5;
  optional google.protobuf.Timestamp updated_at = 6;
  google.protobuf.Timestamp password_updated_at = 7;
  optional google.protobuf.Timestamp email_confirmed_at = 8;
}
